--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "name": "wabot-aq",
   "description": "Lightweight WhatsApp Bot",
-  "repository": "https://github.com/thereal666/whatsapp-bot/tree/noindo",
+  "repository": "https://github.com/thereal666/tokio",
   "logo": "https://node-js-sample.herokuapp.com/node.png",
   "keywords": ["bot", "whatsapp", "whatsapp-bot"]
 }
