--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "wabot-aq",
+  "name": "tokio",
   "description": "Lightweight WhatsApp Bot",
   "repository": "https://github.com/thereal666/tokio",
   "logo": "https://node-js-sample.herokuapp.com/node.png",
