--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "Toman",
+  "name": "Toman-Bot",
   "description": "Lightweight WhatsApp Bot",
   "repository": "https://github.com/Chingkheinganba06/tokio-wabot",
   "logo": "https://node-js-sample.herokuapp.com/node.png",
