--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "wabot-aq",
   "version": "2.5.1",
-  "description": "Customizable WhatsApp Bot",
+  "description": " WhatsApp Using Lib Baileys Multi Device",
   "depecrated": false,
   "main": "index.js",
   "directories": {
@@ -21,6 +21,7 @@
     "whatsapp-bot",
     "whatsapp",
     "js-whatsapp"
+    "multi-device"
   ],
   "homepage": "https://github.com/Nurutomo/wabot-aq",
   "author": {
@@ -35,18 +36,18 @@
   },
   "license": "GPL-3.0-or-later",
   "dependencies": {
-    "@adiwajshing/baileys": "^3.5.3",
-    "awesome-phonenumber": "^2.54.0",
+    "@adiwajshing/baileys": "^4.1.0",
+    "awesome-phonenumber": "^2.64.0",
     "brainly-scraper-v2": "^2.0.4-1",
     "cfonts": "^2.9.3",
-    "chalk": "^4.1.1",
-    "cheerio": "^1.0.0-rc.5",
+    "chalk": "^4.1.2",
+    "cheerio": "^1.0.0-rc.10",
     "express": "^4.17.1",
-    "file-type": "^16.5.2",
+    "file-type": "^16.5.3",
     "form-data": "^4.0.0",
     "g-i-s": "^2.1.6",
     "google-it": "^1.6.2",
-    "got": "^11.8.2",
+    "got": "^11.8.3",
     "human-readable": "^0.2.1",
     "jsbarcode": "^3.11.4",
     "jsdom": "^16.6.0",
@@ -56,7 +57,7 @@
     "node-gtts": "^2.0.2",
     "node-webpmux": "^3.1.0",
     "nodemon": "^2.0.13",
-    "mongoose": "^6.0.11",
+    "mongoose": "^6.2.1",
     "qrcode": "^1.4.4",
     "qrcode-terminal": "^0.12.0",
     "similarity": "^1.2.1",
@@ -66,7 +67,7 @@
     "translate-google-api": "^1.0.4",
     "url-regex": "^5.0.0",
     "xmldom": "^0.6.0",
-    "yargs": "^17.0.1",
-    "yt-search": "^2.9.0"
+    "yargs": "^17.2.1",
+    "yt-search": "^2.10.2"
   }
 }
