--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "name": "tokio",
   "description": "Lightweight WhatsApp Bot",
-  "repository": "https://github.com/itsajaygaur/tokio-wabot",
+  "repository": "https://github.com/Duxlin/tokio-wabot",
   "logo": "https://node-js-sample.herokuapp.com/node.png",
   "keywords": ["bot", "whatsapp", "whatsapp-bot"]
 }
