--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "tokio",
+  "name": "tokio-wabot",
   "description": "Lightweight WhatsApp Bot",
   "repository": "https://github.com/Duxlin/tokio-wabot",
   "logo": "https://node-js-sample.herokuapp.com/node.png",
