--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tokio-wabot",
+  "name": "wabot-aq",
   "version": "2.5.1",
   "description": " WhatsApp Using Lib Baileys Multi Device",
   "depecrated": false,
