--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-  "name": "wabot-aq",
+  "name": "tokio",
   "description": "Lightweight WhatsApp Bot",
-  "repository": "https://github.com/Duxlin/wabot-aq",
+  "repository": "https://github.com/itsajaygaur/tokio-wabot",
   "logo": "https://node-js-sample.herokuapp.com/node.png",
   "keywords": ["bot", "whatsapp", "whatsapp-bot"]
 }
