--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "wabot-aq",
   "version": "2.5.1",
-  "description": " WhatsApp Using Lib Baileys Multi Device",
+  "description": "Customizable WhatsApp Bot",
   "depecrated": false,
   "main": "index.js",
   "directories": {
@@ -21,33 +21,32 @@
     "whatsapp-bot",
     "whatsapp",
     "js-whatsapp"
-    "multi-device"
   ],
-  "homepage": "https://github.com/Duxlin/wabot-aq",
+  "homepage": "https://github.com/Nurutomo/wabot-aq",
   "author": {
-    "name": "Kanambo"
+    "name": "Nurutomo"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Duxlin/wabot-aq.git"
+    "url": "git+https://github.com/Nurutomo/wabot-aq.git"
   },
   "bugs": {
-    "url": "https://github.com/Duxlin/wabot-aq/issues"
+    "url": "https://github.com/Nurutomo/wabot-aq/issues"
   },
   "license": "GPL-3.0-or-later",
   "dependencies": {
-    "@adiwajshing/baileys": "^4.1.0",
-    "awesome-phonenumber": "^2.64.0",
+    "@adiwajshing/baileys": "^3.5.3",
+    "awesome-phonenumber": "^2.54.0",
     "brainly-scraper-v2": "^2.0.4-1",
     "cfonts": "^2.9.3",
-    "chalk": "^4.1.2",
-    "cheerio": "^1.0.0-rc.10",
+    "chalk": "^4.1.1",
+    "cheerio": "^1.0.0-rc.5",
     "express": "^4.17.1",
-    "file-type": "^16.5.3",
+    "file-type": "^16.5.2",
     "form-data": "^4.0.0",
     "g-i-s": "^2.1.6",
     "google-it": "^1.6.2",
-    "got": "^11.8.3",
+    "got": "^11.8.2",
     "human-readable": "^0.2.1",
     "jsbarcode": "^3.11.4",
     "jsdom": "^16.6.0",
@@ -57,7 +56,7 @@
     "node-gtts": "^2.0.2",
     "node-webpmux": "^3.1.0",
     "nodemon": "^2.0.13",
-    "mongoose": "^6.2.1",
+    "mongoose": "^6.0.11",
     "qrcode": "^1.4.4",
     "qrcode-terminal": "^0.12.0",
     "similarity": "^1.2.1",
@@ -67,7 +66,7 @@
     "translate-google-api": "^1.0.4",
     "url-regex": "^5.0.0",
     "xmldom": "^0.6.0",
-    "yargs": "^17.2.1",
-    "yt-search": "^2.10.2"
+    "yargs": "^17.0.1",
+    "yt-search": "^2.9.0"
   }
 }
