--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Nurutomo/wabot-aq.git"
+    "url": "git+https://github.com/Duxlin/wabot-aq.git"
   },
   "bugs": {
     "url": "https://github.com/Nurutomo/wabot-aq/issues"
