--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   ],
   "homepage": "https://github.com/Kanambp/tokio-wabot",
   "author": {
-    "name": "Legend_hacke"
+    "name": "Kanambo"
   },
   "repository": {
     "type": "git",
